# hspec-discover-repro

./: .gitignore  README.md  altShell.nix  hspec-discover-repro.cabal  shell.nix
nix/: pkgs.nix
test/: SomeModuleSpec.hs
